<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="top"
    android:orientation="vertical">	
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="#000000"
		    android:gravity="center_horizontal"
		    android:orientation="vertical"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    tools:context=".Not_gate" >

		     <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/header_not_txt"
		        android:textColor="#FFFFFF"  
		        android:textSize="30sp"
		        android:layout_marginTop="10sp"
		        android:layout_marginBottom="10sp"/>
		    <ImageView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/not_gate"
		        android:layout_marginBottom="10sp"/>
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/body_not_txt"
		        android:textColor="#FFFFFF" 
		        android:layout_marginLeft="10sp"
		       	android:layout_marginRight="10sp"
		        android:layout_marginBottom="15sp"/>
		    <ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/not_gate_table" 
		        android:layout_marginBottom="30sp"/>
		    <TextView
        		android:id="@+id/copyright_not"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_weight="1"
        		android:textColor="#FFFFFF"
        		android:text="@string/copyright" 
        		android:layout_marginBottom="10sp"/>
		    

</LinearLayout>
</ScrollView>
